Archive2/86/13c5cef04cb13f/output
g++
g++ (GCC) 5.1.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In function 'int main()':
main.cpp:9:5: error: 'Foo::Foo(const Foo&)' is private
     Foo(const Foo&);
     ^
main.cpp:15:20: error: within this context
     auto f = Foo{42};
                    ^
clang++
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:15:14: error: calling a private constructor of class 'Foo'
    auto f = Foo{42};
             ^
main.cpp:9:5: note: declared private here
    Foo(const Foo&);
    ^
1 error generated.
